import { describe, expect, it } from '@jest/globals';

import { ValidationError, article, textOnly, profile, audio, checkingIn } from '../builders.js';
import { geoUri } from '../primitives.js';
import { MediaAudioMimeType, MediaImageMimeType } from '../publication/index.js';

describe(`Given the publication metadata builders`, () => {
  describe(`when using the ${article.name} builder`, () => {
    it('should return a valid TextOnlyMetadata', () => {
      const metadata = article({
        title: 'Great Question',
        content: 'GM!',
        tags: ['question', '42'],
        attachments: [
          {
            item: 'https://example.com/answer',
            type: MediaImageMimeType.PNG,
            altTag: 'The answer',
          },
        ],
      });

      expect(metadata).toMatchSnapshot({
        lens: {
          id: expect.any(String),
        },
      });
    });

    it(`should throw a "${ValidationError.name}" in case of invalid input`, () => {
      expect(() => article({ content: '' })).toThrowError(ValidationError);
    });
  });

  describe(`when using the ${audio.name} builder`, () => {
    it('should return a valid AudioMetadata', () => {
      const metadata = audio({
        title: 'Great song!',
        audio: {
          item: 'https://example.com/song.mp3',
          type: MediaAudioMimeType.MP3,

          artist: 'John Doe',
          cover: 'https://example.com/cover.png',
        },
        attachments: [
          {
            item: 'https://example.com/song-1.mp3',
            type: MediaAudioMimeType.MP3,
            duration: 234,
          },
          {
            item: 'https://example.com/song-2.mp3',
            type: MediaAudioMimeType.MP3,
            duration: 345,
          },
        ],
      });

      expect(metadata).toMatchSnapshot({
        lens: {
          id: expect.any(String),
        },
      });
    });
  });

  describe(`when using the ${checkingIn.name} builder`, () => {
    it('should return a valid CheckingInMetadata for Geo URI location', () => {
      const metadata = checkingIn({
        location: 'The Moon',
        position: geoUri({
          lat: 40.6892,
          lng: -74.0444,
        }),
      });

      expect(metadata).toMatchSnapshot({
        lens: {
          id: expect.any(String),
        },
      });
    });

    it('should return a valid CheckingInMetadata for PhysicalAddress', () => {
      const metadata = checkingIn({
        location: 'The Moon',
        address: {
          streetAddress: '1st Street',
          locality: 'New York',
          region: 'NY',
          postalCode: '10001',
          country: 'US',
        },
      });

      expect(metadata).toMatchSnapshot({
        lens: {
          id: expect.any(String),
        },
      });
    });
  });

  describe(`when using the ${textOnly.name} builder`, () => {
    it('should return a valid TextOnlyMetadata', () => {
      const metadata = textOnly({ content: 'GM!' });

      expect(metadata).toMatchSnapshot({
        lens: {
          id: expect.any(String),
        },
      });
    });
  });

  describe(`when using the ${profile.name} builder`, () => {
    it('should return a valid ProfileMetadata', () => {
      const metadata = profile({ name: 'John Doe' });

      expect(metadata).toMatchSnapshot({
        lens: {
          id: expect.any(String),
          name: 'John Doe',
        },
      });
    });
  });
});
