// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the publication metadata builders when using the article builder should return a valid TextOnlyMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/article/3.0.0.json",
  "lens": {
    "attachments": [
      {
        "altTag": "The answer",
        "item": "https://example.com/answer",
        "type": "image/png",
      },
    ],
    "content": "GM!",
    "id": Any<String>,
    "locale": "en",
    "mainContentFocus": "ARTICLE",
    "tags": [
      "question",
      "42",
    ],
    "title": "Great Question",
  },
}
`;

exports[`Given the publication metadata builders when using the audio builder should return a valid AudioMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/audio/3.0.0.json",
  "lens": {
    "attachments": [
      {
        "duration": 234,
        "item": "https://example.com/song-1.mp3",
        "type": "audio/mpeg",
      },
      {
        "duration": 345,
        "item": "https://example.com/song-2.mp3",
        "type": "audio/mpeg",
      },
    ],
    "audio": {
      "artist": "John Doe",
      "cover": "https://example.com/cover.png",
      "item": "https://example.com/song.mp3",
      "type": "audio/mpeg",
    },
    "id": Any<String>,
    "locale": "en",
    "mainContentFocus": "AUDIO",
    "title": "Great song!",
  },
}
`;

exports[`Given the publication metadata builders when using the checkingIn builder should return a valid CheckingInMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/checking-in/3.0.0.json",
  "lens": {
    "id": Any<String>,
    "locale": "en",
    "location": "The Moon",
    "mainContentFocus": "CHECKING_IN",
    "position": "geo:40.6892,-74.0444",
  },
}
`;

exports[`Given the publication metadata builders when using the checkingIn builder should return a valid CheckingInMetadata for Geo URI location 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/checking-in/3.0.0.json",
  "lens": {
    "id": Any<String>,
    "locale": "en",
    "location": "The Moon",
    "mainContentFocus": "CHECKING_IN",
    "position": "geo:40.6892,-74.0444",
  },
}
`;

exports[`Given the publication metadata builders when using the checkingIn builder should return a valid CheckingInMetadata for PhysicalAddress 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/checking-in/3.0.0.json",
  "lens": {
    "id": Any<String>,
    "locale": "en",
    "location": "The Moon",
    "mainContentFocus": "CHECKING_IN",
    "position": "geo:40.6892,-74.0444",
  },
}
`;

exports[`Given the publication metadata builders when using the profile builder should return a valid ProfileMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/profile/2.0.0.json",
  "lens": {
    "id": Any<String>,
    "name": "John Doe",
  },
}
`;

exports[`Given the publication metadata builders when using the textOnly builder should return a valid TextOnlyMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/text-only/3.0.0.json",
  "lens": {
    "content": "GM!",
    "id": Any<String>,
    "locale": "en",
    "mainContentFocus": "TEXT_ONLY",
  },
}
`;
